--- a/eres/templates/Sign_Up.html
+++ b/eres/templates/Sign_Up.html
@@ -121,7 +121,7 @@
           {{form.direccion.error}}
         </div>
 
-        <div class="input">
+        <div class="input1">
           <label class="titulosinput">Añadir foto</label>
           {{form.foto}}
           {{form.foto.error}}
