--- a/eres/static/css/landing1.css
+++ b/eres/static/css/landing1.css
@@ -43,6 +43,7 @@ body{
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
+    padding: 0px 2px;
 }
 
 .div-publicaciones{
@@ -54,7 +55,7 @@ body{
     height: auto;
     /*border: solid 1px black;*/
     margin: 10px 10px;
-    background-color: rgba(223, 221, 221, 0.2);
+   /* background-color: rgba(223, 221, 221, 0.2);*/
     border-radius: 8px;
     padding: 5px 0px;
 }
@@ -98,7 +99,7 @@ body{
     background-repeat: no-repeat;
     background-position: 50%;
     border-radius: 50%;
-    background-size: 110% auto;
+    background-size: 145% auto;
     margin: 0px 8px;
 }
 
@@ -273,6 +274,131 @@ body{
 }
 
 
+/* comentarios */
+
+.coments{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+}
+
+.comentario-indi1{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
+    height: auto;
+    margin-bottom: 5px;
+    /*background: rgb(0,0,0,0.8);*/
+}
+
+.comentario-foto1{
+    display: flex;
+    height: 40px;
+    width: 40px;
+    background-repeat: no-repeat;
+    background-position: 50%;
+    border-radius: 50%;
+    background-size: 110% auto;
+    margin: 5px 2px;
+}
+
+.comentario-texto1{
+    width: 95%;
+    height: auto;
+    margin: 0px 0px;
+    background: rgba(223, 221, 221, 0.3) ;
+    /*border: #0081c6 solid 2px;*/
+    border-radius: 8px;
+}
+
+.txt{
+    color: black;
+    font-weight: 300;
+    font-size: 13px;
+    margin: 0px 3px;
+    margin-bottom: 3px;
+}
+
+.nombre-comentario1{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: auto;
+    margin: 5px 5px;
+}
+
+.nombreusuario{
+    font-weight: 500;
+    font-size: 14px;
+    color: #0081c6;
+}
+
+.vermas{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    height: auto;
+    font-size: 11px;
+    border-top: solid 1px #0081c6;
+    margin: 2px 0px;
+    color: #0a4768;
+    cursor: pointer;
+    background: ;
+}
+
+.visor{
+    display: none;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-color: rgb(0, 0, 0, 0.8);
+    top: 0;
+    left: 0;
+    overflow-y: scroll;
+}
+
+.visor-imagen{
+    margin: 5% auto;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    width: 60%;
+    height: auto;
+    border-radius: 8px;
+    
+}
+
+.equis{
+    position:absolute;
+    right: 0px;
+    margin: 10px;
+    font-size: 20px;
+    color: white;
+}
+
+.imagen{
+    width: 100%;
+    border-radius: 8px;
+}
+
+
+
+@media all and (max-width: 1500px){
+
+    .descripcion-foto p{
+        padding: 0px 8px;
+        text-align: left;
+        font-weight: 300;
+        font-size: 14px;
+    }
+
+}
 
 @media all and (max-width: 1350px){
 
@@ -280,7 +406,7 @@ body{
         padding: 0px 8px;
         text-align: left;
         font-weight: 300;
-        font-size: 15px;
+        font-size: 14px;
     }
 
 }
@@ -335,6 +461,11 @@ body{
     .div-noticias{
         width: 100%;
         height: auto;
+        padding: 0px 4px;
+    }
+
+    .encabezado{
+        width: 100%;
     }
     
     .div-publicaciones{
@@ -348,6 +479,15 @@ body{
 
     .div-comentarios input{
         width: 85%;
+    }
+
+    .publicacion{
+        width: 100%;
+        height: auto;
+        border:solid 2px #0081c6;
+        border-radius: 8px;
+        margin: 10px;
+        background-color: white;
     }
     
 }
