Solo falta la inscripcion

--- a/eres/templates/landing1.html
+++ b/eres/templates/landing1.html
@@ -321,7 +321,7 @@
                  t =   "<div class='comentario-indi' >" +
                                     "<div class='comentario-foto' style='background-image:url({{e.user.foto.url}})'></div>" +
                                     "<div class='comentario-texto'>" +
-                                        "<div class='nombre-comentario'>{{c.user}}</div>" +
+                                        "<div class='nombre-comentario'>{{e.user}}</div>" +
                                         "<p>" + html.texto + "</p>" +
                                     "</div>" +
                                 "</div>"
