con lo que voy a mostrar en la vigilia

--- a/eres/templates/crear-destacamento.html
+++ b/eres/templates/crear-destacamento.html
@@ -45,7 +45,13 @@
     <div class="contenedor">
         <div class="tarjeta">
             <img src="{% static "/imagenes/Royal_Rangers.svg.png"%}" alt="">
-            <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non eaque corporis consectetur sapiente necessitatibus perspiciatis, eius id ratione pariatur? Quod, cum veniam? Quasi blanditiis eligendi.</p>
+            <p class="texto">
+
+                    "Convertirse en niño es un asunto de nacimiento; 
+convertirse en hombre es un asunto de elección".
+Exploradores del Rey es una herramienta que pueden usar los hombres y muchachos, y que los une para evangelizar al mundo, equipar a la próxima generación de hombres de Dios, y empoderarlos para que sean líderes siervos de por vida.
+
+            </p>
             <hr>
           <a href="{% url "creardestacamento"  %}"> <button class="guardar" type="" name="button"><p class="textbtn">Comenzar</p></button></a> 
 
