--- a/eres/templates/menu.html
+++ b/eres/templates/menu.html
@@ -23,7 +23,7 @@
           <li id="li"><a href="#" id="efecto"><strong>{{user.username}} </strong> </a></li>
           <li><a href="{% url "logOut" %}">Cerrar Session</a></li>
             <li><a href="{% url "perfil" %}">Pefil</a></li>
-            <li><a href="#">Eventos</a></li>
+            <li><a href="{% url "exploblog" %}">Blog</a></li>
           {% endif %}
 
 
