--- a/eres/static/css/Sign_Up.css
+++ b/eres/static/css/Sign_Up.css
@@ -241,7 +241,7 @@ font-size: 20px;
 
 select{
   background: rgba(0, 0, 0, 0);
-  width: 100px;
+  width: 100%;
   height: 40px;
   color: white;
   border-radius: 5px;
