--- a/eres/static/css/lista.css
+++ b/eres/static/css/lista.css
@@ -160,6 +160,18 @@
     font-size: 16px;
 }
 
+.boton-cargo{
+    color: #ffffff;
+    background: rgb(187, 168, 83);
+    border-radius: 5px;
+    border: none;
+    width: auto;
+    padding: 8px ;
+    cursor: pointer;
+    margin: 0px 4px;
+    font-size: 16px;
+}
+
 .foto-perfil{
     width: 120px;
     height: 120px;
@@ -516,3 +528,5 @@ form{
   }
 
 }
+
+
